--- a/api/pom.xml
+++ b/api/pom.xml
@@ -21,7 +21,7 @@
     <dependencies>
         <dependency>
             <groupId>com.example</groupId>
-            <artifactId>client</artifactId>
+            <artifactId>service</artifactId>
             <version>0.0.1-SNAPSHOT</version>
 <!--            <scope>compile</scope>-->
         </dependency>
