--- a/pom.xml
+++ b/pom.xml
@@ -17,16 +17,33 @@
     <packaging>pom</packaging>
 
     <dependencies>
+        <!-- web 驱动 -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
             <version>2.5.6</version>
         </dependency>
+        <!--mysql驱动-->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.11</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+        </dependency>
     </dependencies>
 
 
     <modules>
-        <module>client</module>
+        <module>service</module>
+        <module>repository</module>
         <module>api</module>
     </modules>
 </project>
