--- a/service/pom.xml
+++ b/service/pom.xml
@@ -8,6 +8,7 @@
     <artifactId>service</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>service</name>
+    <packaging>jar</packaging>
     <description>service project for Spring Boot</description>
     <parent>
         <groupId>com.example</groupId>
