--- a/service/pom.xml
+++ b/service/pom.xml
@@ -18,4 +18,13 @@
     <properties>
         <java.version>1.8</java.version>
     </properties>
+
+    <dependencies>
+        <dependency>
+            <groupId>com.example</groupId>
+            <artifactId>repository</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <!-- <scope>compile</scope>-->
+        </dependency>
+    </dependencies>
 </project>
