--- a/api/src/main/resources/application.yaml
+++ b/api/src/main/resources/application.yaml
@@ -1,10 +1,9 @@
 server:
   port: 8080
-spring:
-  profiles:
-    active: test
+#spring:
+#  profiles:
+#    active: dev
 # spring.profiles.active 表示激活哪个环境.环境 list 需要在下边定义
-
 ---
 server:
   port: 8081
@@ -23,3 +22,22 @@ spring:
   config:
     activate:
       on-profile: test
+
+---
+spring:
+  datasource:
+    username: root
+    password: rootroot
+    url: jdbc:mysql://localhost:3306/employees?serverTimezone=UTC&characterEncoding=utf-8
+    driver-class-name: com.mysql.cj.jdbc.Driver
+
+  jpa:
+    database: mysql
+    show-sql: true
+    hibernate:
+      ddl-auto: update
+      naming:
+        strategy: org.hibernate.cfg.ImprovedNamingStrategy
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQL5Dialect
